# ComfyUI-Nikosis-Preprocessors

./: LICENSE  README.md  __init__.py  logger.py  pyproject.toml  requirements.txt
nodes/: __init__.py  depth_anything_v2_nikosis.py  depth_anything_v2_nikosisFx.py  depth_anything_v2_nikosisOLDWORKS.py  edge_nikosis.py  laplacian_nikosis.py  lineart_nikosis.py  lineart_sketch_nikosis.py  sketch_lineart_nikosis.py
processors/edge/: edge.py
processors/lineart/: lineart.py  lineart_sketch.py
processors/sketch/: lineart_sketch.py  lineart_sketch_core.py
utils/: image_utils.py  model_paths.py
utils/processors/lineart/: sketch_lineart.py
